<?xml version="1.0"?>
<package>
  <name>laser_deskew</name>
  <version>0.0.0</version>
  <description>The laser_deskew package</description>

  <maintainer email="rsasaki0109@gmail.com">sasaki</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <depend>pcl_ros</depend>

  <export>

  </export>
</package>
